2012-05-23  Dana Jansens  <danakj@chromium.org>

        [chromium] Layers on main thread should get a RenderSurface for animating transform only if masksToBounds is true also
        https://bugs.webkit.org/show_bug.cgi?id=87184

        Reviewed by James Robinson.

        * tests/CCLayerTreeHostCommonTest.cpp:
        (WebKitTests::TEST):

2012-05-23  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move queryLocalizedString to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=85762

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * WebKit.gyp:
        * public/platform/WebKitPlatformSupport.h:
        (WebKit::WebKitPlatformSupport::getPluginList):
        * public/platform/WebLocalizedString.h:
        * src/LocalizedStrings.cpp:
        (WebCore::query):

2012-05-23  Antti Koivisto  <antti@apple.com>

        Build fix.

        Not reviewed.

        * src/WebDocument.cpp:
        (WebKit::WebDocument::insertUserStyleSheet):

2012-05-22  Alexandre Elias  <aelias@google.com>

        [chromium] Apply viewport tag initial-scale only once
        https://bugs.webkit.org/show_bug.cgi?id=82949

        Reviewed by Adam Barth.

        First, check that isPageScaleFactorSet return false before setting
        initial-scale. We need to call dispatchViewportPropertiesDidChange()
        when the viewport width changes, since that's an input to the viewport
        tag calculation. When this happens, we shouldn't pop back to initial
        scale.

        Second, check that isNewNavigation is true when deciding to clear
        isPageScaleFactorIsSet in didCommitLoad. We only want to clear it on
        the very first commit, otherwise we'll pop back to initial scale if
        the user zooms in before the load is complete.

        New test WebFrameTest::FixedLayoutInitializeAtMinimumPageScale.

        * src/ChromeClientImpl.cpp: